--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -50,10 +50,15 @@ jobs:
           key: bookdown-2-${{ hashFiles('**/*Rmd') }}
           restore-keys: bookdown-2-
 
-      - name: Render book
+      - name: Render book HTML
         run: |
           Rscript -e 'bookdown::clean_book(TRUE)'
           Rscript -e 'bookdown::render_book("index.Rmd", quiet = TRUE)'
+
+      - name: Render book PDF
+        run: |
+          Rscript -e 'bookdown::clean_book(TRUE)'
+          Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
 
       - uses: actions/upload-artifact@v1
         with:
