try fixing TikZ + knitr incompatibility

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,4 +58,5 @@ URL:
   https://github.com/nhejazi/ser2021_mediation_workshop,
   https://code.nimahejazi.org/ser2021_mediation_workshop
 BugReports: https://github.com/nhejazi/ser2021_mediation_workshop/issues
+Encoding: UTF-8
 RoxygenNote: 7.1.1
