--- a/_output.yml
+++ b/_output.yml
@@ -28,7 +28,9 @@ bookdown::pdf_book:
     before_body: latex_extras/before_body.tex
     after_body: latex_extras/after_body.tex
   keep_tex: yes
+  dev: "cairo_pdf"
   highlight: tango
+  toc_depth: 3
   toc_unnumbered: false
   toc_appendix: true
   pandoc_args: ["--top-level-division=chapter", "--listings"]
