--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -53,11 +53,11 @@ jobs:
       - name: Render book HTML
         run: |
           Rscript -e 'bookdown::clean_book(TRUE)'
-          Rscript -e 'bookdown::render_book("index.Rmd", quiet = TRUE)'
+          Rscript -e 'bookdown::render_book("index.Rmd")'
 
       - name: Render book PDF
         run: |
-          Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_book")'
+          Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::pdf_document2")'
 
       - uses: actions/upload-artifact@v1
         with:
