--- a/_output.yml
+++ b/_output.yml
@@ -33,4 +33,20 @@ bookdown::pdf_book:
   toc_depth: 3
   toc_unnumbered: false
   toc_appendix: true
+  highlight_bw: true
   pandoc_args: ["--top-level-division=chapter", "--listings"]
+
+bookdown::pdf_document2:
+  latex_engine: pdflatex
+  citation_package: natbib
+  includes:
+    in_header: latex_extras/preamble.tex
+    before_body: latex_extras/before_body.tex
+    after_body: latex_extras/after_body.tex
+  keep_tex: yes
+  dev: "cairo_pdf"
+  highlight: tango
+  toc_depth: 3
+  toc_unnumbered: false
+  pandoc_args: ["--top-level-division=chapter", "--listings"]
+
