--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup R
-        uses: r-lib/actions/setup-r@master
+        uses: r-lib/actions/setup-r@v1
+        with:
+          r-version: '4.0.5'
 
       - name: Install pandoc
         uses: r-lib/actions/setup-pandoc@v1
