--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup R
-        uses: r-lib/actions/setup-r@v1
+        uses: r-lib/actions/setup-r@master
         with:
           r-version: '4.0.5'
 
@@ -55,7 +55,7 @@ jobs:
       - name: Render book HTML
         run: |
           Rscript -e 'bookdown::clean_book(TRUE)'
-          Rscript -e 'bookdown::render_book("index.Rmd")'
+          Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook")'
 
       - name: Render book PDF
         run: |
